@@ -1,3 +1,15 @@
+2021-06-17  W.D. Xiong  <w_xiong@apple.com>
+
+        [Monterey] Add Seed 1 to bot watchers' dashboard
+        https://bugs.webkit.org/show_bug.cgi?id=226747
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/build-webkit-org/public_html/dashboard/Images/Monterey.png: Added.
+        * CISupport/build-webkit-org/public_html/dashboard/Scripts/Dashboard.js: Added Monterey
+        * CISupport/build-webkit-org/public_html/dashboard/Styles/Main.css: Added Monterey
+        (table.queue-grid tr.platform.macos-monterey img.logo):
+
 2021-06-17  Per Arne Vollan  <pvollan@apple.com>
 
         [Win] Exception running layout tests
